Avoid jvm warnings.